# gtk4

./: meson.build  meson_options.txt
debian/: changelog  clean  control  control.in  copyright  gbp.conf  gtk-4-examples.install  gtk-update-icon-cache.links  ignore.keyfile  libgtk-4-1.symbols.in  libgtk-4-bin.install  libgtk-4-bin.manpages  libgtk-4-doc.install  libgtk-4-doc.links  log-reftests.py  rules  run-tests.sh  watch
debian/patches/: Disable-inscription-markup.ui-reftest.patch  GLX-Add-extra-glXMakeContextCurrent-call-to-work-around-a.patch  GtkFileChooserWidget-Propagate-keys-from-external-entry-t.patch  GtkFileChooserWidget-check-for-empty-instead-of-NULL-GLis.patch  GtkFileChooserWidget-return-empty-GListModel-in-get_files.patch  Make-our-stack-noexec.patch  Revert-build-Drop-the-install-tests-option.patch  Revert-css-Simplify-theme-loading.patch  Revert-tests-Stop-copying-the-tool-tests.patch  Revert-treepopover-Do-not-propagate-natural-width-of-cont.patch  Skip-some-known-failing-tests-on-mips-family-architecture.patch  Update-Abkhazian-translation-1.patch  Update-Abkhazian-translation.patch  Update-Basque-translation.patch  Update-Dutch-translation.patch  Update-Georgian-translation.patch  Update-Hebrew-translation-1.patch  Update-Hebrew-translation.patch  Update-Hungarian-translation.patch  Update-Turkish-translation.patch  Updated-Spanish-translation.patch  Work-around-1014417-in-Meson.patch  boxlayout-Do-not-infloop.patch  build-Add-an-option-to-use-more-conservative-GResource-em.patch  build-Tell-glib-compile-resources-to-make-symbols-interna.patch  build-Use-more-conservative-GResource-embedding-on-non-x8.patch  ci-avoid-another-date-dependent-failure.patch  combobox-Avoid-extra-queue_resize.patch  disable-checkerboard-reftests.patch  egl-Fix-invalid-format-string.patch  filechooser-Small-fix-for-save-mode.patch  filechooser-Small-fix-for-select-folder-mode.patch  focus-fall-back-to-old-behaviour-if-we-didn-t-focus-anyth.patch  gdk-Check-some-assertions-on-our-architectures.patch  gdk-wayland-Fix-button-mask-calculation-on-button-events.patch  gdk-wayland-Use-serial-of-the-latest-implicit-grab-availa.patch  gdk-x11-Invalidate-whole-surface-after-size-change.patch  gdk-x11-Reset-all-scroll-valuators-on-enter.patch  gdkevents-Don-t-ignore-modifiers-that-are-not-currently-a.patch  gdkgltexture-Avoid-use-after-free-when-switching-GdkGLCon.patch  (+45 more)
debian/patches/debian/: Disable-clipboard-test.patch  Disable-gtk-template-test.patch  Disable-inscription-markup.ui-reftest.patch  Disable-optimized-GResource-embedding.patch  Disable-web-fonts-for-now.patch  Skip-some-known-failing-tests-on-mips-family-architecture.patch  ignore_a11ytext_i386.patch  (+11 more)
debian/tests/: build  control  installed-tests  installed-tests-flaky  python3-gi  run-with-display
debian/upstream/: metadata
gdk/: gdk.c  gdkevents.h  gdkframeclockidle.c  meson.build
gdk/wayland/: gdkwaylandsurface.h
gsk/: gskpathbuilder.c  gskroundedrect.c  gskroundedrectprivate.h
gsk/gl/: gskglcommandqueue.c  gskgldriver.c  gskgldriverprivate.h  gskglrenderjob.c
gsk/gpu/: gskvulkandevice.c
gtk/: gtkcssnumbervalue.c  gtkfilechoosernativeportal.c  gtkwindow.c  gtkwindowcontrols.c
gtk/print/: gtkprintoperation-unix.c
modules/media/: gtkgstmediafile.c  gtkgstpaintable.c  meson.build
subprojects/gi-docgen/: .editorconfig  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGES.md  MANIFEST.in  README.md  meson.build  pyproject.toml  pytest.ini  setup.cfg  setup.py
subprojects/gi-docgen/.reuse/: dep5
subprojects/gi-docgen/docs/: conf.py  gi-docgen.1  project-configuration.rst  tutorial.rst
subprojects/gi-docgen/docs/tools/: index.rst  serve.rst
subprojects/gi-docgen/examples/: urlmap.js
subprojects/gi-docgen/gidocgen/: config.py  core.py  gdgenerate.py  gdgenindices.py  gdsearch.py  gdserver.py  gidocmain.py  log.py  utils.py
subprojects/gi-docgen/gidocgen/gir/: ast.py  parser.py
subprojects/gi-docgen/gidocgen/templates/basic/: base.html  class.html  class_method.html  constant.html  content.html  ctor.html  enum.html  function.html  interface.html  method.html  namespace.html  property.html  signal.html  struct.html  style.css  type_func.html  vfunc.html
subprojects/gi-docgen/test/: __init__.py  test_gir_parser.py  test_utils.py
subprojects/gi-docgen/test/gir/: GLib-2.0.gir  GObject-2.0.gir
subprojects/gstreamer-player-1.0/: meson.build
subprojects/gstreamer-player-1.0/gst/play/: gstplay-media-info-private.h  gstplay-media-info.c  gstplay-media-info.h  gstplay-message-private.h  gstplay-signal-adapter.c  gstplay-signal-adapter.h  gstplay-types.h  gstplay-video-overlay-video-renderer.c  gstplay-video-overlay-video-renderer.h  gstplay-video-renderer-private.h  gstplay-video-renderer.c  gstplay-video-renderer.h  gstplay-visualization.c  gstplay-visualization.h  gstplay.c  gstplay.h  meson.build  play-prelude.h
subprojects/gstreamer-player-1.0/gst/player/: gstplayer-g-main-context-signal-dispatcher.c  gstplayer-g-main-context-signal-dispatcher.h  gstplayer-media-info-private.h  gstplayer-media-info.c  gstplayer-media-info.h  gstplayer-signal-dispatcher-private.h  gstplayer-signal-dispatcher.c  gstplayer-signal-dispatcher.h  gstplayer-types.h  gstplayer-video-overlay-video-renderer.c  gstplayer-video-overlay-video-renderer.h  gstplayer-video-renderer-private.h  gstplayer-video-renderer.c  gstplayer-video-renderer.h  gstplayer-visualization.c  gstplayer-visualization.h  gstplayer-wrapped-video-renderer-private.h  gstplayer-wrapped-video-renderer.c  gstplayer.c  gstplayer.h  meson.build  player-prelude.h
subprojects/wayland/: meson.build  release.sh
testsuite/a11y/: meson.build
testsuite/css/: meson.build
testsuite/gdk/: memorytexture.c  meson.build
testsuite/gsk/: compare-render.c  meson.build  normalize.c  scaling.c
testsuite/gtk/: meson.build  templates.c
testsuite/reftests/: gtk-reftest.c  image-compare.c  meson.build  reftest-compare.c  reftest-compare.h
testsuite/tools/: meson.build  validate.in
tools/: gtk-image-tool-compare.c  gtk-rendernode-tool-compare.c
(+19 files in other folders)
