# SPDX-FileCopyrightText: 2021 GNOME Foundation
#
# SPDX-License-Identifier: Apache-2.0 OR GPL-3.0-or-later

[metadata]
name = gi-docgen
version = attr: gidocgen.core.version
description = Documentation tool for GObject-based libraries
long_description = file: README.md
long_description_content_type = text/markdown
author = Emmanuele Bassi
author_email = ebassi@gnome.org
url = https://gitlab.gnome.org/GNOME/gi-docgen
project_urls =
  Bug tracker = https://gitlab.gnome.org/GNOME/gi-docgen/issues/
  Documentation = https://gnome.pages.gitlab.gnome.org/gi-docgen/
keywords =
  documentation
  introspection
  gobject
  gtk
license = GPL-3.0-or-later AND Apache-2.0 AND CC0-1.0
license_files =
  LICENSES/Apache-2.0.txt
  LICENSES/GPL-3.0-or-later.txt
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Natural Language :: English
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: BSD
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Desktop Environment :: Gnome
  Topic :: Software Development :: Documentation


[options]
include_package_data = true
packages =
  gidocgen
  gidocgen.gir
python_requires = >= 3.6.0
setup_requires =
  setuptools
install_requires =
  Markdown >= 3.2
  MarkupSafe
  Pygments
  jinja2
  tomli; python_version < '3.11'
  typogrify

[options.entry_points]
console_scripts =
  gi-docgen = gidocgen.gidocmain:main

[options.data_files]
share/pkgconfig = gi-docgen.pc
share/man/man1 = docs/gi-docgen.1

[options.package_data]
gidocgen =
  templates/basic/basic.toml
  templates/basic/*.css
  templates/basic/*.html
  templates/basic/*.js
  templates/basic/*.png
  templates/basic/*.woff2
  templates/basic/*.woff
  py.typed

[bdist_wheel]
universal = true
